// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots match 1`] = `
<div
  className="@dr.pogodin/react-utils___src/shared/components/ScalableRect/style___container___32tbH2"
  style={
    Object {
      "paddingBottom": "100%",
    }
  }
>
  <div
    className="@dr.pogodin/react-utils___src/shared/components/ScalableRect/style___wrapper___23rk-B"
  >
    CONTENT
  </div>
</div>
`;

exports[`Snapshots match 2`] = `
<div
  className="CLASS_NAME"
>
  <div
    className="@dr.pogodin/react-utils___src/shared/components/ScalableRect/style___container___32tbH2"
    style={
      Object {
        "paddingBottom": "100%",
      }
    }
  >
    <div
      className="@dr.pogodin/react-utils___src/shared/components/ScalableRect/style___wrapper___23rk-B"
    >
      CONTENT
    </div>
  </div>
</div>
`;
